<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/img_product"
                android:layout_width="92dp"
                android:layout_height="92dp"
                android:src="@drawable/ic_basket"
                android:contentDescription="@string/product_image" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/basket_price"
            android:textColor="@color/purple"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="@dimen/_78sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:maxLines="2"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_attribute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/attribute"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold" />

    </LinearLayout>



</FrameLayout>