<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.product.ProductFragmentDetail">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/product_detail"
        app:titleCentered="true"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_close"
        >
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_basket_detail"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_basket" />

                <TextView
                    android:id="@+id/totalBasket"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/grey"
                    android:gravity="center"
                    android:text="@string/basket_price"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </com.google.android.material.appbar.MaterialToolbar>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:gravity="center"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialToolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            >

            <ImageView
                android:id="@+id/img_product"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/product_image"
                 />


            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basket_price"
                android:textColor="@color/purple"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="@dimen/_78sdp"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:gravity="center"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_attribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attribute"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        app:cardUseCompatPadding="true"
        app:elevation="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/btn_add_basket_detail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/style_btn"
            android:text="@string/add_to_basket"
            android:visibility="visible"
            />


        <LinearLayout
            android:id="@+id/btn_linears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
        android:visibility="gone"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/btn_delete"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_30sdp"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:src="@drawable/ic_delete"
                    android:layout_gravity="center"
                    android:contentDescription="@string/add_to_basket_icon" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_piece"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_30sdp"
                app:cardBackgroundColor="@color/purple"

                >
                <TextView
                    android:id="@+id/tv_piece"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="1"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"

                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/btn_add_detail"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_30sdp"

                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/ic_add"
                    android:layout_gravity="center"
                    android:contentDescription="@string/add_to_basket_icon" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>



    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>