<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".presentation.basket.BasketFragment">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tlbar_basket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/basket"
        app:titleCentered="true"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_close"
        >
        <ImageView
            android:id="@+id/ic_rubbish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/ic_rubbish"
            />
     </com.google.android.material.appbar.MaterialToolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_basket"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_190sdp"
        android:background="@color/white"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlbar_basket"
        />

    <TextView
        android:id="@+id/tv_suggested"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggested_products"
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/rv_basket"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_suggested"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_suggested"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        app:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_add_basket_detail"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/style_btn"
                android:text="@string/complete_receipt" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"

                android:background="@drawable/style_btn_white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/normal_price"

                        />

                    <TextView
                        android:id="@+id/total_price_basket"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="2dp"
                        android:text="@string/discount_price"
                        android:textColor="@color/purple"
                        android:textSize="@dimen/_20ssp"

                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>